# pypi_validate_cpf

./: .flake8  .pre-commit-config.yaml  .toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev-requirements.txt  noxfile.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: pipeline.yml
src/validate_cpf/: __init__.py  __main__.py  cli.py  py.typed  validate_cpf.py
tests/: __init__.py  test_validate_cpf.py
