[tool.poetry]
name = "validate_cpf"
version = "0.1.2"
description = "Faz a validação de CPF Brasileiro"
authors = ["Drummerzzz <devdrummerzzz@gmail.com>"]
keywords = ['cpf', 'validador', 'validação', 'validation', 'validator', 'poetry']

repository = "https://github.com/drummerzzz/pypi_validate_cpf"
homepage = "https://github.com/drummerzzz/pypi_validate_cpf/README.md"

readme = 'README.md'
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
line-length = 88

src_folder = "./."

[tool.coverage]
[tool.coverage.run]
omit = ["tests/*", "*conftest.py", "*/interfaces/*", "*/__init__.py"]
